--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 authors = [{ name = "johnnyxcy", email = "johnny.xcy1997@outlook.com" }]
+dependencies = [
+    "libcst>=1.7.0",
+    "numpy>=2.2.6",
+    "polars>=1.29.0",
+    "sympy>=1.14.0",
+]
 
-dependencies = ["numpy>=2.2.6", "polars>=1.29.0", "sympy>=1.14.0"]
+[dependency-groups]
+dev = ["pytest>=8.3.5", "ruff>=0.11.10"]
 
 [tool.uv]
 
@@ -24,7 +31,7 @@ include = ["src"]
 [tool.pyright]
 typeCheckingMode = "standard"
 pythonVersion = "3.13"
-include = ["src"]
+include = ["src", "tests"]
 
 strictListInference = true
 strictDictionaryInference = true
@@ -58,5 +65,33 @@ docstring-code-format = true
 "__init__.py" = ["E402", "F403"]
 "**/__tests__/*" = ["D"]
 
-[dependency-groups]
-dev = ["ruff>=0.11.10"]
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+
+[tool.coverage.run]
+branch = true
+omit = [
+    "**/tests/*",
+    "**/__tests__/*",
+    "**/__mock__/*",
+    "node_modules",
+    "vendor",
+    "i18n",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "def __str__",
+    "def _ipython_display_",
+    "def _repr_*_",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "@(abc.)?abstractmethod",
+    "if __name__ == .__main__.:",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
