--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "libcst>=1.7.0",
     "numpy>=2.2.6",
     "polars>=1.29.0",
+    "pydantic>=2.11.4",
     "sympy>=1.14.0",
 ]
 
