--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [{ name = "johnnyxcy", email = "johnny.xcy1997@outlook.com" }]
 dependencies = [
     "libcst>=1.7.0",
     "numpy>=2.2.6",
+    "pandas>=2.2.3",
     "polars>=1.29.0",
     "pydantic>=2.11.4",
     "sympy>=1.14.0",
